--- a/.github/workflows/gen-debian-repo.yml
+++ b/.github/workflows/gen-debian-repo.yml
@@ -44,7 +44,6 @@ jobs:
                       done
                   done
             - name: Upload Artifacts
-              uses: actions/upload-artifact@v3
+              uses: actions/upload-artifact@v4
               with:
-                  name: debian-packages
-                  path: archive/*.deb
+                  path: archive
