--- a/.github/workflows/gen-debian-repo.yml
+++ b/.github/workflows/gen-debian-repo.yml
@@ -45,8 +45,8 @@ jobs:
                       done
                   done
                   DAT_VERSION="$(cat ./v2ray-rules-dat_version.txt)"
-                  cat ./nfpm/v2ray-rules-dat.yaml | sed "s/REAL_VERSION/$DAT_VERSION/g" > /tmp/nfpm/v2ray-rules-dat.yaml
-                  nfpm package --config /tmp/nfpm/v2ray-rules-dat.yaml --target ./archive/v2ray-rules-dat_${DAT_VERSION}_all.deb
+                  cat ./nfpm/v2ray-rules-dat.yaml | sed "s/REAL_VERSION/$DAT_VERSION/g" > /tmp/v2ray-rules-dat.yaml
+                  nfpm package --config /tmp/v2ray-rules-dat.yaml --target ./archive/v2ray-rules-dat_${DAT_VERSION}_all.deb
             - name: Upload Artifacts
               uses: actions/upload-artifact@v4
               with:
