--- a/.github/workflows/gen-debian-repo.yml
+++ b/.github/workflows/gen-debian-repo.yml
@@ -62,10 +62,13 @@ jobs:
             - name: Create Debian Repo
               run: |
                   bash -c "$(cat create-debian-repo.sh)"
+                  cp public-key.asc repo/public-key.asc
+                  npm i markdown-to-html-cli -g
+                  markdown-to-html --output repo/index.html README.md
             - name: Compress repo
               run: |
-                  tar -czvf repo.tar.gz repo
+                  zip -r repo.zip repo
             - name: Upload Artifact
               uses: nanoufo/action-upload-artifacts-and-release-assets@v2
               with:
-                path: repo.tar.gz
+                path: repo.zip
