--- a/.github/workflows/gen-debian-repo.yml
+++ b/.github/workflows/gen-debian-repo.yml
@@ -76,8 +76,8 @@ jobs:
             - name: Upload to Cloudflare
               run: | 
                   npm install -g wrangler
+                  export CLOUDFLARE_ACCOUNT_ID=${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+                  export CLOUDFLARE_API_TOKEN=${{ secrets.CLOUDFLARE_API }}
                   wrangler pages deploy ./repo \
-                    --project-name=daeuniverse \
-                    --api-token=${{ secrets.CLOUDFLARE_API_KEY }} \
-                    --account-id=${{ secrets.CLOUDFLARE_ACCOUNT_ID }} \
-                    --branch=main
+                      --project-name=daeuniverse \
+                      --branch=main
